# CCA-STAFF

./: .env.example  00_START_HERE.md  BULK_IMPORT_ARCHITECTURE.md  BULK_IMPORT_GUIDE.md  BULK_IMPORT_SETUP.md  COMPLETION_STATUS.md  DEPLOY_FREE.md  DEVELOPER_GUIDE.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  MAC_INSTALL.md  README.md  RELEASE_NOTES.md  SETUP_GUIDE.md  Staff_Biodata_System_User_Training_Guide.docx  TESTING_CHECKLIST.md  generate_training_guide.py  index.html  package-lock.json  package.json  render.yaml  setup-backend.bat  setup-backend.sh  vite.config.js
.claude/: settings.json  settings.local.json
.github/workflows/: release-desktop.yml  step-increments.yml
backend/: .env.example  .gitignore  DATABASE_SCHEMA.md  README.md  build.sh  manage.py  requirements.txt  test_image_upload.py
backend/accounts/: admin.py  decorators.py  html_urls.py  lockout.py  management_forms.py  management_views.py  media_views.py  middleware.py  models.py  password_change.py  permissions.py  serializers.py  sessions.py  upload_validators.py  urls.py  validators.py  views.py
backend/audit/: admin.py  apps.py  auditlog_registry.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py
backend/common/: sync.py
docs/: AUTO_UPDATE.md  NEON_SETUP.md  OFFLINE_FIRST_ARCHITECTURE.md  OFFLINE_FIRST_PHASE3_PLAN.md  TAURI_SETUP.md
src/: App.css  App.jsx  index.css  main.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+204 files in other folders)
